Fixed small bug on Firefox regarding .about-us height

--- a/assets/css/tablet.css
+++ b/assets/css/tablet.css
@@ -1,5 +1,5 @@
 .about-us {
-	height: auto;
+	height: 650px;
 }
 
 .about-us__slider {
